assignment02/log
make ARCH=i386 CORSS_COMPILE=i586-poky-linux- -C /root/VM_SHARE/kernel-header-3.8 SUBDIRS=/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02 modules
make[1]: Entering directory '/root/VM_SHARE/kernel-header-3.8'
  CC [M]  /root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04.o
/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04.c:22:5: warning: initialization from incompatible pointer type
     .unlocked_ioctl = hc_sr04_ioctl,
     ^
/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04.c:22:5: warning: (near initialization for 'hc_sr04_fops.unlocked_ioctl')
In file included from include/asm-generic/ioctl.h:4:0,
                 from /root/VM_SHARE/kernel-header-3.8/arch/x86/include/uapi/asm/ioctl.h:1,
                 from /root/VM_SHARE/kernel-header-3.8/include/uapi/linux/ioctl.h:4,
                 from /root/VM_SHARE/kernel-header-3.8/arch/x86/include/uapi/asm/msr.h:9,
                 from /root/VM_SHARE/kernel-header-3.8/arch/x86/include/asm/msr.h:4,
                 from /root/VM_SHARE/kernel-header-3.8/arch/x86/include/asm/processor.h:20,
                 from /root/VM_SHARE/kernel-header-3.8/arch/x86/include/asm/thread_info.h:22,
                 from include/linux/thread_info.h:54,
                 from include/linux/preempt.h:9,
                 from include/linux/spinlock.h:50,
                 from include/linux/seqlock.h:29,
                 from include/linux/time.h:5,
                 from include/linux/stat.h:18,
                 from include/linux/module.h:10,
                 from /root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04.c:2:
/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04.c: In function 'hc_sr04_open':
include/asm-generic/ioctl.h:9:12: error: expected expression before ')' token
  ((sizeof(t) == sizeof(t[1]) && \
            ^
include/uapi/asm-generic/ioctl.h:69:5: note: in definition of macro '_IOC'
   ((size) << _IOC_SIZESHIFT))
     ^
include/uapi/asm-generic/ioctl.h:78:57: note: in expansion of macro '_IOC_TYPECHECK'
 #define _IOW(type,nr,size) _IOC(_IOC_WRITE,(type),(nr),(_IOC_TYPECHECK(size)))
                                                         ^
/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04_common.h:4:17: note: in expansion of macro '_IOW'
 #define SETPINS _IOW(HCSR_W_MAGIC, 1, (struct pin_set*))
                 ^
/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04.c:56:56: note: in expansion of macro 'SETPINS'
     printk(KERN_ALERT "Open: %s,%d", c->hc_sr04->name, SETPINS);
                                                        ^
include/asm-generic/ioctl.h:11:12: error: expected expression before ')' token
    sizeof(t) : __invalid_size_argument_for_IOC)
            ^
include/uapi/asm-generic/ioctl.h:69:5: note: in definition of macro '_IOC'
   ((size) << _IOC_SIZESHIFT))
     ^
include/uapi/asm-generic/ioctl.h:78:57: note: in expansion of macro '_IOC_TYPECHECK'
 #define _IOW(type,nr,size) _IOC(_IOC_WRITE,(type),(nr),(_IOC_TYPECHECK(size)))
                                                         ^
/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04_common.h:4:17: note: in expansion of macro '_IOW'
 #define SETPINS _IOW(HCSR_W_MAGIC, 1, (struct pin_set*))
                 ^
/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04.c:56:56: note: in expansion of macro 'SETPINS'
     printk(KERN_ALERT "Open: %s,%d", c->hc_sr04->name, SETPINS);
                                                        ^
scripts/Makefile.build:313: recipe for target '/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04.o' failed
make[2]: *** [/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02/hc_sr04.o] Error 1
Makefile:1220: recipe for target '_module_/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02' failed
make[1]: *** [_module_/root/VM_SHARE/ProjectFolder/git/asu_eosi_fall_2016/assignment02] Error 2
make[1]: Leaving directory '/root/VM_SHARE/kernel-header-3.8'
Makefile:23: recipe for target 'all' failed
make: *** [all] Error 2
